--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -68,6 +68,12 @@ blockquote {
   font-style:italic;
 }
 
+code {
+  background: #f8f8f8;
+  border-radius:2px;
+  border:1px solid #e5e5e5;
+}
+
 code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color:#333;
