--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,20 +26,14 @@
     </script>
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner-medium.png" alt="Gura Programming Language/" /></a>
-        <p></p>
-        <p class="view"><a href="{{ topdir }}/index.html">Top Page</a></p>
-        <p class="view"><a href="{{ topdir }}/Download.html">Download</a></p>
-        <p class="view"><a href="{{ topdir }}/Gallery.html">Gallery</a></p>
-        <p class="view"><a href="https://github.com/gura-lang/gura">Repository</a></p>
-        <!--
-        <ul>
-          <li><a href="https://github.com/gura-lang/gura/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/gura-lang/gura/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/gura-lang/gura">View On <strong>GitHub</strong></a></li>
-        </ul>
-        -->
-      </header>
-      <section>
+    <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner.png" alt="Gura Programming Language/" /></a>
+    <a href="{{ topdir }}/Download.html" style="margin-left: 1em">Download</a>
+    <a href="{{ topdir }}/Gallery.html" style="margin-left: 1em">Gallery</a>
+    <a href="https://github.com/gura-lang/gura" style="margin-left: 1em">Repository</a>
+    <!--
+    <ul>
+      <li><a href="https://github.com/gura-lang/gura/zipball/master">Download <strong>ZIP File</strong></a></li>
+      <li><a href="https://github.com/gura-lang/gura/tarball/master">Download <strong>TAR Ball</strong></a></li>
+      <li><a href="https://github.com/gura-lang/gura">View On <strong>GitHub</strong></a></li>
+    </ul>
+    -->
