--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
 body {
+  width:700px;
   padding:5px;
   font:15px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#222;
