--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,10 +26,12 @@
     </script>
   </head>
   <body>
-    <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner.png" alt="Gura Programming Language/" /></a>
-    <a href="{{ topdir }}/Download.html" style="margin-left: 1em">Download</a>
-    <a href="{{ topdir }}/Gallery.html" style="margin-left: 1em">Gallery</a>
-    <a href="https://github.com/gura-lang/gura" style="margin-left: 1em">Repository</a>
+    <div style="margin-bottom: 1em">
+      <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner.png" alt="Gura Programming Language/" /></a>
+      <a href="{{ topdir }}/Download.html" style="margin-left: 1em">Download</a>
+      <a href="{{ topdir }}/Gallery.html" style="margin-left: 1em">Gallery</a>
+      <a href="https://github.com/gura-lang/gura" style="margin-left: 1em">Repository</a>
+    </div>
     <!--
     <ul>
       <li><a href="https://github.com/gura-lang/gura/zipball/master">Download <strong>ZIP File</strong></a></li>
