--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
     </script>
   </head>
   <body>
-    <div style="margin-bottom:1em">
+    <div style="margin-bottom:1em; text-align:center">
       <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner.png" alt="Gura Programming Language/" /></a>
       <a href="{{ topdir }}/Download.html" style="margin-left:1em">Download</a>
       <a href="{{ topdir }}/Gallery.html" style="margin-left:1em">Gallery</a>
@@ -39,4 +39,4 @@
       <li><a href="https://github.com/gura-lang/gura">View On <strong>GitHub</strong></a></li>
     </ul>
     -->
-    <div style="width:700px">
+    <div style="width:700px; text-align:center">
