--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,5 +39,4 @@
       <li><a href="https://github.com/gura-lang/gura">View On <strong>GitHub</strong></a></li>
     </ul>
     -->
-    <div style="text-align:center">
-      <div style="width:700px">
+    <div style="width:700px; align:center">
