--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
     </div>
+    <hr />
+    <div style="margin:0 auto; width:850px">
+      Copyright (C) 2011-2014 <a href="ypsitau@nifty.com">ypsitau</a>
+    </div>
   </body>
 </html>
