--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,12 +26,13 @@
     </script>
   </head>
   <body>
-    <div style="margin-bottom:1em">
-      <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner.png" alt="Gura Programming Language/" /></a>
+    <div style="margin:0 auto; width:850px; margin-bottom:1em">
+      <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner-medium.png" alt="Gura Programming Language/" /></a>
       <a href="{{ topdir }}/Download.html" style="margin-left:1em">Download</a>
       <a href="{{ topdir }}/Gallery.html" style="margin-left:1em">Gallery</a>
       <a href="https://github.com/gura-lang/gura" style="margin-left:1em">Repository</a>
     </div>
+    <hr />
     <!--
     <ul>
       <li><a href="https://github.com/gura-lang/gura/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -39,4 +40,4 @@
       <li><a href="https://github.com/gura-lang/gura">View On <strong>GitHub</strong></a></li>
     </ul>
     -->
-    <div style="width:700px">
+    <div style="margin:0 auto; width:800px">
