added event tracker of Google Analytics

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,8 @@
       <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner-medium.png" alt="Gura Programming Language/" /></a>
       <a href="{{ topdir }}/Download.html" style="margin-left:1em">Download</a>
       <a href="{{ topdir }}/Gallery.html" style="margin-left:1em">Gallery</a>
-      <a href="https://github.com/gura-lang/gura" style="margin-left:1em">Repository</a>
+      <a href="https://github.com/gura-lang/gura" style="margin-left:1em"
+       onClick="_gaq.push(['_trackEvent','download','click','Repository']);">Repository</a>
     </div>
     <hr />
     <!--
