--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
       <a href="{{ topdir }}/Download.html" style="margin-left:1em">Download</a>
       <a href="{{ topdir }}/Gallery.html" style="margin-left:1em">Gallery</a>
       <a href="https://github.com/gura-lang/gura" style="margin-left:1em"
-       onClick="_gaq.push(['_trackEvent','download','click','Repository']);">Repository</a>
+       onClick="_gaq.push(['_trackEvent','repository','click','top']);">Repository</a>
     </div>
     <hr />
     <!--
