--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
       <a href="{{ topdir }}/Download.html" style="margin-left:1em">Download</a>
       <a href="{{ topdir }}/Gallery.html" style="margin-left:1em">Gallery</a>
       <a href="https://github.com/gura-lang/gura" style="margin-left:1em"
-       onClick="_gaq.push(['_trackEvent','repository','click','top']);">Repository</a>
+       onClick="ga('send', 'event', 'button', 'click', 'Repository');">Repository</a>
     </div>
     <hr />
     <!--
