created an independent page for documents

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,8 @@
   <body>
     <div style="margin:0 auto; width:850px; margin-bottom:1em">
       <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner-medium.png" alt="Gura Programming Language/" /></a>
+      <a href="{{ topdir }}/index.html" style="margin-left:1em">Top</a>
+      <a href="{{ topdir }}/Documents.html" style="margin-left:1em">Documents</a>
       <a href="{{ topdir }}/Download.html" style="margin-left:1em">Download</a>
       <a href="{{ topdir }}/Gallery.html" style="margin-left:1em">Gallery</a>
       <a href="https://github.com/gura-lang/gura" style="margin-left:1em"
