Improving readability on small screens

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     </div>
     <hr />
-    <div style="margin:0 auto; width:850px">
+    <div style="margin:0 auto; max-width:850px">
       Copyright (C) 2011-2014 <a href="mailto:ypsitau@nifty.com">ypsitau</a>
     </div>
   </body>
