--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ topdir }}/stylesheets/pygment_trac.css">
     <link rel="shortcut icon" href="{{ topdir }}/images/favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="icon" href="{{ topdir }}/images/favicon.ico" type="image/vnd.microsoft.icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="gura programming language object oriented iterator web free source" />
     <meta name="description" content="Gura Programming Language" />
     <!--[if lt IE 9]>
@@ -24,8 +24,8 @@
     </script>
   </head>
   <body>
-    <div style="margin:0 auto; width:850px; margin-bottom:1em">
-      <a href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner-medium.png" alt="Gura Programming Language/" /></a>
+    <div style="margin:0 auto; max-width:850px; margin-bottom:1em">
+      <a class="logo" href="{{ topdir }}/index.html"><img src="{{ topdir }}/images/banner-medium.png" alt="Gura Programming Language/" /></a>
       <a href="{{ topdir }}/index.html" style="margin-left:1em">Top</a>
       <a href="{{ topdir }}/Documents.html" style="margin-left:1em">Documents</a>
       <a href="{{ topdir }}/Download.html" style="margin-left:1em">Download</a>
@@ -41,4 +41,4 @@
       <li><a href="https://github.com/gura-lang/gura">View On <strong>GitHub</strong></a></li>
     </ul>
     -->
-    <div style="margin:0 auto; width:800px">
+    <div style="margin:0 auto; max-width:800px">
